@@ -20,17 +20,21 @@ import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.admin.Admin;
 import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.admin.ConsumerGroupDescription;
+import org.apache.kafka.clients.admin.MemberDescription;
 import org.apache.kafka.clients.admin.NewTopic;
 import org.apache.kafka.clients.consumer.ConsumerConfig;
 import org.apache.kafka.clients.consumer.GroupProtocol;
 import org.apache.kafka.clients.consumer.KafkaConsumer;
 import org.apache.kafka.clients.consumer.RangeAssignor;
 import org.apache.kafka.clients.consumer.RoundRobinAssignor;
+import org.apache.kafka.clients.producer.KafkaProducer;
+import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.common.GroupState;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.errors.GroupIdNotFoundException;
 import org.apache.kafka.common.errors.TimeoutException;
 import org.apache.kafka.common.serialization.StringDeserializer;
+import org.apache.kafka.common.serialization.StringSerializer;
 import org.apache.kafka.common.test.api.ClusterConfig;
 import org.apache.kafka.common.test.api.ClusterInstance;
 import org.apache.kafka.common.test.api.ClusterTemplate;
@@ -57,11 +61,11 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutionException;
-import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import static org.apache.kafka.test.TestUtils.RANDOM;
@@ -75,10 +79,10 @@ import static org.junit.jupiter.api.Assertions.fail;
 public class DescribeConsumerGroupTest {
     private static final String TOPIC_PREFIX = "test.topic.";
     private static final String GROUP_PREFIX = "test.group.";
-    private static final List<List<String>> DESCRIBE_TYPE_OFFSETS = Arrays.asList(Collections.singletonList(""), Collections.singletonList("--offsets"));
-    private static final List<List<String>> DESCRIBE_TYPE_MEMBERS = Arrays.asList(Collections.singletonList("--members"), Arrays.asList("--members", "--verbose"));
-    private static final List<List<String>> DESCRIBE_TYPE_STATE = Collections.singletonList(Collections.singletonList("--state"));
-    private static final List<List<String>> DESCRIBE_TYPES = Stream.of(DESCRIBE_TYPE_OFFSETS, DESCRIBE_TYPE_MEMBERS, DESCRIBE_TYPE_STATE).flatMap(Collection::stream).collect(Collectors.toList());
+    private static final List<List<String>> DESCRIBE_TYPE_OFFSETS = List.of(List.of(""), List.of("--offsets"), List.of("--offsets", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPE_MEMBERS = List.of(List.of("--members"), List.of("--members", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPE_STATE = List.of(List.of("--state"), List.of("--state", "--verbose"));
+    private static final List<List<String>> DESCRIBE_TYPES = Stream.of(DESCRIBE_TYPE_OFFSETS, DESCRIBE_TYPE_MEMBERS, DESCRIBE_TYPE_STATE).flatMap(Collection::stream).toList();
     private ClusterInstance clusterInstance;
 
     private static List<ClusterConfig> generator() {
@@ -140,7 +144,7 @@ public class DescribeConsumerGroupTest {
                  // note the group to be queried is a different (non-existing) group
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", missingGroup})
             ) {
-                service.collectGroupMembers(missingGroup, false);
+                service.collectGroupMembers(missingGroup);
                 fail("Expected the group '" + missingGroup + "' to throw GroupIdNotFoundException");
             } catch (ExecutionException ee) {
                 assertInstanceOf(GroupIdNotFoundException.class, ee.getCause(),
@@ -171,22 +175,180 @@ public class DescribeConsumerGroupTest {
     }
 
     @ClusterTemplate("generator")
-    public void testDescribeExistingGroup(ClusterInstance clusterInstance) throws Exception {
+    public void testDescribeGroupOffsets(ClusterInstance clusterInstance) throws Exception {
         this.clusterInstance = clusterInstance;
         for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
             String topic = TOPIC_PREFIX + groupProtocol.name();
-            createTopic(topic);
-            for (List<String> describeType : DESCRIBE_TYPES) {
-                String protocolGroup = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
-                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", protocolGroup));
+            clusterInstance.createTopic(topic, 1, (short) 1);
+            sendRecords(topic, 0, 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_OFFSETS) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
                 cgcArgs.addAll(describeType);
-                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, protocolGroup, topic, Collections.emptyMap());
-                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]))
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, topic, Map.of());
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
                 ) {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
-                        return res.getKey().trim().split("\n").length == 2 && res.getValue().isEmpty() && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                        MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+
+                        List<String> expectedValues;
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, topic, "0", "-", "1", "1", "0", memberDescription.consumerId(),
+                                memberDescription.host(), memberDescription.clientId());
+                        } else {
+                            expectedValues = List.of(group, topic, "0", "1", "1", "0", memberDescription.consumerId(),
+                                memberDescription.host(), memberDescription.clientId());
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
                     }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
+                }
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupMembers(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
+            boolean isConsumer = groupProtocol.equals(GroupProtocol.CONSUMER);
+            String topic1 = TOPIC_PREFIX + groupProtocol.name() + "1";
+            String topic2 = TOPIC_PREFIX + groupProtocol.name() + "2";
+            clusterInstance.createTopic(topic1, 2, (short) 1);
+            clusterInstance.createTopic(topic2, 1, (short) 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_MEMBERS) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, Set.of(topic1, topic2), Map.of(), 1);
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
+                ) {
+                    TestUtils.waitForCondition(() -> {
+                        Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                        MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+                        String topicAssignment = topic1 + ":0,1;" + topic2 + ":0";
+
+                        List<String> expectedValues;
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, memberDescription.consumerId(), memberDescription.host(),
+                                memberDescription.clientId(), "3", isConsumer ? memberDescription.memberEpoch().get().toString() : "-",
+                                topicAssignment, isConsumer ? consumerGroupDescription.targetAssignmentEpoch().get().toString() : "-",
+                                isConsumer ? topicAssignment : "-");
+                        } else {
+                            expectedValues = List.of(group, memberDescription.consumerId(), memberDescription.host(),
+                                memberDescription.clientId(), "3");
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
+                    }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
+                }
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupMemberWithMigration(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        String topic = TOPIC_PREFIX + "migration";
+        String group = GROUP_PREFIX + "migration";
+        String classicClientId = "classic";
+        String consumerClientId = "consumer";
+        clusterInstance.createTopic(topic, 2, (short) 1);
+        List<String> cgcArgs = List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group, "--members", "--verbose");
+        try (AutoCloseable classicConsumer = consumerGroupClosable(GroupProtocol.CLASSIC, group, topic, Map.of(ConsumerConfig.CLIENT_ID_CONFIG, classicClientId));
+             Admin admin = clusterInstance.admin()
+        ) {
+            // Make sure the classic consumer is stable before starting another consumer.
+            TestUtils.waitForCondition(
+                () -> {
+                    ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+                    MemberDescription memberDescription = consumerGroupDescription.members().iterator().next();
+                    return !memberDescription.assignment().topicPartitions().isEmpty();
+                },
+                "Expected the classic consumer to join the group."
+            );
+
+            try (AutoCloseable consumerConsumer = consumerGroupClosable(GroupProtocol.CONSUMER, group, topic, Map.of(ConsumerConfig.CLIENT_ID_CONFIG, consumerClientId));
+                 ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+            ) {
+                TestUtils.waitForCondition(() -> {
+                    Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                    String[] lines = res.getKey().trim().split("\n");
+                    if (lines.length != 3 && !res.getValue().isEmpty()) {
+                        return false;
+                    }
+
+                    // We can't guarantee the order of the lines and final assignment on both members,
+                    // so only checking UPGRADED field to make sure the tool can reflect member migration.
+                    String[] header = lines[0].trim().split("\\s+");
+                    assertEquals("UPGRADED", header[header.length - 1]);
+                    List<String> line1 = Arrays.stream(lines[1].trim().split("\\s+")).toList();
+                    List<String> line2 = Arrays.stream(lines[2].trim().split("\\s+")).toList();
+                    if (line1.contains(classicClientId)) {
+                        assertEquals("false", line1.get(line1.size() - 1));
+                        assertEquals("true", line2.get(line2.size() - 1));
+                    } else {
+                        assertEquals("false", line2.get(line2.size() - 1));
+                        assertEquals("true", line1.get(line1.size() - 1));
+                    }
+                    return true;
+                }, "Expected a data row and no error in describe results with describe type \"--members --verbose\"");
+            }
+        }
+    }
+
+    @ClusterTemplate("generator")
+    public void testDescribeGroupState(ClusterInstance clusterInstance) throws Exception {
+        this.clusterInstance = clusterInstance;
+        for (GroupProtocol groupProtocol: clusterInstance.supportedGroupProtocols()) {
+            boolean isConsumer = groupProtocol.equals(GroupProtocol.CONSUMER);
+            String topic = TOPIC_PREFIX + groupProtocol.name();
+            clusterInstance.createTopic(topic, 1, (short) 1);
+
+            for (List<String> describeType : DESCRIBE_TYPE_STATE) {
+                String group = GROUP_PREFIX + groupProtocol.name() + "." + String.join("", describeType);
+                List<String> cgcArgs = new ArrayList<>(List.of("--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group));
+                cgcArgs.addAll(describeType);
+                try (AutoCloseable protocolConsumerGroupExecutor = consumerGroupClosable(groupProtocol, group, topic, Map.of());
+                     ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(cgcArgs.toArray(new String[0]));
+                     Admin admin = clusterInstance.admin()
+                ) {
+                    TestUtils.waitForCondition(() -> {
+                        Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
+                        String[] lines = res.getKey().trim().split("\n");
+                        if (lines.length != 2 && !res.getValue().isEmpty()) {
+                            return false;
+                        }
+                        ConsumerGroupDescription consumerGroupDescription = admin.describeConsumerGroups(Set.of(group)).describedGroups().get(group).get();
+
+                        List<String> expectedValues;
+                        String coordinatorAddress = consumerGroupDescription.coordinator().host() + ":" + consumerGroupDescription.coordinator().port();
+                        String coordinatorId = "(" + consumerGroupDescription.coordinator().idString() + ")";
+                        if (describeType.contains("--verbose")) {
+                            expectedValues = List.of(group, coordinatorAddress, coordinatorId, consumerGroupDescription.partitionAssignor(), GroupState.STABLE.toString(),
+                                isConsumer ? consumerGroupDescription.groupEpoch().get().toString() : "-",
+                                isConsumer ? consumerGroupDescription.targetAssignmentEpoch().get().toString() : "-", "1");
+                        } else {
+                            expectedValues = List.of(group, coordinatorAddress, coordinatorId, consumerGroupDescription.partitionAssignor(), GroupState.STABLE.toString(), "1");
+                        }
+                        return checkArgsHeaderOutput(cgcArgs, lines[0]) &&
+                            Arrays.stream(lines[1].trim().split("\\s+")).toList().equals(expectedValues);
+                    }, "Expected two data rows and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                 }
             }
         }
@@ -219,7 +381,9 @@ public class DescribeConsumerGroupTest {
                         TestUtils.waitForCondition(() -> {
                             Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                             long numLines = Arrays.stream(res.getKey().trim().split("\n")).filter(line -> !line.isEmpty()).count();
-                            return (numLines == expectedNumLines) && res.getValue().isEmpty() && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                            return (numLines == expectedNumLines) &&
+                                res.getValue().isEmpty() &&
+                                checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                         }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                     }
                 }
@@ -255,7 +419,9 @@ public class DescribeConsumerGroupTest {
                         TestUtils.waitForCondition(() -> {
                             Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                             long numLines = Arrays.stream(res.getKey().trim().split("\n")).filter(line -> !line.isEmpty()).count();
-                            return (numLines == expectedNumLines) && res.getValue().isEmpty() && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                            return (numLines == expectedNumLines) &&
+                                res.getValue().isEmpty() &&
+                                checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                         }, "Expected a data row and no error in describe results with describe type " + String.join(" ", describeType) + ".");
                     }
                 }
@@ -328,7 +494,7 @@ public class DescribeConsumerGroupTest {
                     return consumerGroupDescription.members().size() == 1 && consumerGroupDescription.members().iterator().next().assignment().topicPartitions().size() == 1;
                 }, "Expected a 'Stable' group status, rows and valid member information for group " + group + ".");
 
-                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
 
                 assertTrue(res.getValue().isPresent());
                 assertTrue(res.getValue().get().size() == 1 && res.getValue().get().iterator().next().assignment.size() == 1,
@@ -415,7 +581,9 @@ public class DescribeConsumerGroupTest {
                 ) {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
-                        return res.getKey().trim().split("\n").length == 2 && res.getValue().isEmpty() && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                        return res.getKey().trim().split("\n").length == 2 &&
+                            res.getValue().isEmpty() &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected describe group results with one data row for describe type '" + String.join(" ", describeType) + "'");
                     
                     protocolConsumerGroupExecutor.close();
@@ -477,7 +645,7 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                     return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false)
                             && res.getValue().map(c -> c.stream().anyMatch(m -> Objects.equals(m.group, group))).orElse(false);
                 }, "Expected the group to initially become stable, and to find group in assignments after initial offset commit.");
@@ -486,7 +654,7 @@ public class DescribeConsumerGroupTest {
                 protocolConsumerGroupExecutor.close();
 
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                     return res.getKey().map(s -> s.equals(GroupState.EMPTY)).orElse(false) && res.getValue().isPresent() && res.getValue().get().isEmpty();
                 }, "Expected no member in describe group members results for group '" + group + "'");
             }
@@ -542,7 +710,9 @@ public class DescribeConsumerGroupTest {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                         int expectedNumRows = DESCRIBE_TYPE_MEMBERS.contains(describeType) ? 3 : 2;
-                        return res.getValue().isEmpty() && res.getKey().trim().split("\n").length == expectedNumRows && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                        return res.getValue().isEmpty() &&
+                            res.getKey().trim().split("\n").length == expectedNumRows &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected a single data row in describe group result with describe type '" + String.join(" ", describeType) + "'");
                 }
             }
@@ -585,16 +755,16 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                     return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.numPartitions == 1).count() == 1 &&
                             res.getValue().get().stream().filter(x -> Objects.equals(x.group, group) && x.numPartitions == 0).count() == 1 &&
-                            res.getValue().get().stream().allMatch(s -> s.assignment.isEmpty());
+                            res.getValue().get().stream().anyMatch(s -> !s.assignment.isEmpty());
                 }, "Expected rows for consumers with no assigned partitions in describe group results");
 
-                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                 assertTrue(res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false)
                                 && res.getValue().map(c -> c.stream().anyMatch(s -> !s.assignment.isEmpty())).orElse(false),
                         "Expected additional columns in verbose version of describe members");
@@ -640,7 +810,9 @@ public class DescribeConsumerGroupTest {
                     TestUtils.waitForCondition(() -> {
                         Entry<String, String> res = ToolsTestUtils.grabConsoleOutputAndError(describeGroups(service));
                         int expectedNumRows = DESCRIBE_TYPE_STATE.contains(describeType) ? 2 : 3;
-                        return res.getValue().isEmpty() && res.getKey().trim().split("\n").length == expectedNumRows && checkArgsOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
+                        return res.getValue().isEmpty() &&
+                            res.getKey().trim().split("\n").length == expectedNumRows &&
+                            checkArgsHeaderOutput(cgcArgs, res.getKey().trim().split("\n")[0]);
                     }, "Expected a single data row in describe group result with describe type '" + String.join(" ", describeType) + "'");
                 }
             }
@@ -684,7 +856,7 @@ public class DescribeConsumerGroupTest {
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group})
             ) {
                 TestUtils.waitForCondition(() -> {
-                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, false);
+                    Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                     return res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) &&
                             res.getValue().isPresent() &&
                             res.getValue().get().stream().filter(s -> Objects.equals(s.group, group)).count() == 2 &&
@@ -692,7 +864,7 @@ public class DescribeConsumerGroupTest {
                             res.getValue().get().stream().noneMatch(x -> Objects.equals(x.group, group) && x.numPartitions == 0);
                 }, "Expected two rows (one row per consumer) in describe group members results.");
 
-                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group, true);
+                Entry<Optional<GroupState>, Optional<Collection<MemberAssignmentState>>> res = service.collectGroupMembers(group);
                 assertTrue(res.getKey().map(s -> s.equals(GroupState.STABLE)).orElse(false) && res.getValue().map(s -> s.stream().filter(x -> x.assignment.isEmpty()).count()).orElse(0L) == 0,
                         "Expected additional columns in verbose version of describe members");
             }
@@ -804,9 +976,9 @@ public class DescribeConsumerGroupTest {
                  // set the group initialization timeout too low for the group to stabilize
                  ConsumerGroupCommand.ConsumerGroupService service = consumerGroupService(new String[]{"--bootstrap-server", clusterInstance.bootstrapServers(), "--describe", "--group", group, "--timeout", "1"})
             ) {
-                Throwable e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group, false));
+                Throwable e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group));
                 assertEquals(TimeoutException.class, e.getCause().getClass());
-                e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group, true));
+                e = assertThrows(ExecutionException.class, () -> service.collectGroupMembers(group));
                 assertEquals(TimeoutException.class, e.getCause().getClass());
             }
         }
@@ -978,6 +1150,16 @@ public class DescribeConsumerGroupTest {
     }
 
     private AutoCloseable consumerGroupClosable(GroupProtocol protocol, String groupId, String topicName, Map<String, Object> customConfigs, int numConsumers) {
+        return consumerGroupClosable(protocol, groupId, Set.of(topicName), customConfigs, numConsumers);
+    }
+
+    private AutoCloseable consumerGroupClosable(
+        GroupProtocol protocol,
+        String groupId,
+        Set<String> topicNames,
+        Map<String, Object> customConfigs,
+        int numConsumers
+    ) {
         Map<String, Object> configs = composeConfigs(
                 groupId,
                 protocol.name,
@@ -985,9 +1167,9 @@ public class DescribeConsumerGroupTest {
         );
         return ConsumerGroupCommandTestUtils.buildConsumers(
                 numConsumers,
-                false,
-                topicName,
-                () -> new KafkaConsumer<String, String>(configs)
+                true,
+                () -> new KafkaConsumer<String, String>(configs),
+                consumer -> consumer.subscribe(topicNames)
         );
     }
 
@@ -1007,43 +1189,57 @@ public class DescribeConsumerGroupTest {
         return () -> Assertions.assertDoesNotThrow(service::describeGroups);
     }
 
-    private boolean checkArgsOutput(List<String> args, String output) {
+    private boolean checkArgsHeaderOutput(List<String> args, String output) {
         if (!output.contains("GROUP")) {
             return false;
         }
 
         if (args.contains("--members")) {
-            return checkMembersArgsOutput(output, args.contains("--verbose"));
+            return checkMembersArgsHeaderOutput(output, args.contains("--verbose"));
         }
 
         if (args.contains("--state")) {
-            return checkStateArgsOutput(output);
+            return checkStateArgsHeaderOutput(output, args.contains("--verbose"));
         }
 
         // --offsets or no arguments
-        AtomicBoolean result = new AtomicBoolean(true);
-        List.of("TOPIC", "PARTITION", "CURRENT-OFFSET", "LOG-END-OFFSET", "LAG", "CONSUMER-ID", "HOST", "CLIENT-ID").forEach(key -> {
-            if (!output.contains(key)) {
-                result.set(false);
-            }
-        });
-        return result.get();
+        return checkOffsetsArgsHeaderOutput(output, args.contains("--verbose"));
     }
 
-    private boolean checkMembersArgsOutput(String output, boolean verbose) {
-        AtomicBoolean result = new AtomicBoolean(true);
+    private boolean checkOffsetsArgsHeaderOutput(String output, boolean verbose) {
         List<String> expectedKeys = verbose ?
-            List.of("CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS", "ASSIGNMENT") :
-            List.of("CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS");
-        expectedKeys.forEach(key -> {
-            if (!output.contains(key)) {
-                result.set(false);
-            }
-        });
-        return result.get();
+            List.of("GROUP", "TOPIC", "PARTITION", "LEADER-EPOCH", "CURRENT-OFFSET", "LOG-END-OFFSET", "LAG", "CONSUMER-ID", "HOST", "CLIENT-ID") :
+            List.of("GROUP", "TOPIC", "PARTITION", "CURRENT-OFFSET", "LOG-END-OFFSET", "LAG", "CONSUMER-ID", "HOST", "CLIENT-ID");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
     }
 
     private boolean checkStateArgsOutput(String output) {
         return output.contains("COORDINATOR (ID)") && output.contains("ASSIGNMENT-STRATEGY") && output.contains("STATE") && output.contains("#MEMBERS");
+    }
+
+    private boolean checkMembersArgsHeaderOutput(String output, boolean verbose) {
+        List<String> expectedKeys = verbose ?
+            List.of("GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS", "CURRENT-EPOCH", "CURRENT-ASSIGNMENT", "TARGET-EPOCH", "TARGET-ASSIGNMENT") :
+            List.of("GROUP", "CONSUMER-ID", "HOST", "CLIENT-ID", "#PARTITIONS");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
+    }
+
+    private boolean checkStateArgsHeaderOutput(String output, boolean verbose) {
+        List<String> expectedKeys = verbose ?
+            List.of("GROUP", "COORDINATOR", "(ID)", "ASSIGNMENT-STRATEGY", "STATE", "GROUP-EPOCH", "TARGET-ASSIGNMENT-EPOCH", "#MEMBERS") :
+            List.of("GROUP", "COORDINATOR", "(ID)", "ASSIGNMENT-STRATEGY", "STATE", "#MEMBERS");
+        return Arrays.stream(output.trim().split("\\s+")).toList().equals(expectedKeys);
+    }
+
+    private void sendRecords(String topic, int partition, int recordsCount) {
+        try (KafkaProducer<String, String> producer = new KafkaProducer<>(Map.of(
+            ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, clusterInstance.bootstrapServers(),
+            ProducerConfig.KEY_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName(),
+            ProducerConfig.VALUE_SERIALIZER_CLASS_CONFIG, StringSerializer.class.getName()
+        ))) {
+            IntStream.range(0, recordsCount).forEach(i ->
+                producer.send(new org.apache.kafka.clients.producer.ProducerRecord<>(topic, partition, Integer.toString(i), Integer.toString(i))));
+            producer.flush();
+        }
     }
 }
